--- a/index.html
+++ b/index.html
@@ -124,10 +124,18 @@
 
     <div id = project>
         <h1>나랑 같이 프로젝트를 하고 있는 팀원</h1>
-        <p> · 이국정</p>
-        <p> · 박병준</p>
-        <p> · 김해준</p>
-        <p> · 이승우</p>
+       <p>
+            <a href="https://github.com/redituser" target="_blank" >· 이국정</a> 
+        </p>
+        <p> 
+            <a href="https://github.com/asd8449" target="_blank" >· 박병준</a>
+        </p>
+        <p> 
+            <a href="https://github.com/haejun1213" target="_blank" >· 김해준
+            </p></a>
+        <p> 
+            <a href="https://github.com/LswPolyAiSw" target="_blank" >· 이승우</a>
+        </p>
     </div>
 </main>
 </body>
