--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <a href="https://github.com/asd8449" target="_blank" >· 박병준</a>
         </p>
         <p> 
-            <a href="https://github.com/haejun1213" target="_blank" >· 김해준
-            </p></a>
+            <a href="https://github.com/haejun1213" target="_blank" >· 김해준</a>
+        </p>
         <p> 
             <a href="https://github.com/LswPolyAiSw" target="_blank" >· 이승우</a>
         </p>
