--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     </div>
 
 
-    <div id = project>
+    <div id = "project">
         <h1>나랑 같이 프로젝트를 하고 있는 팀원</h1>
-       <p>
+        <p>
             <a href="https://github.com/redituser" target="_blank" >· 이국정</a> 
         </p>
         <p> 
@@ -132,7 +132,7 @@
         </p>
         <p> 
             <a href="https://github.com/haejun1213" target="_blank" >· 김해준</a>
-        </p>
+            </p>
         <p> 
             <a href="https://github.com/LswPolyAiSw" target="_blank" >· 이승우</a>
         </p>
