--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Hi+Melody&family=Orbit&display=swap" rel="stylesheet">
 </head>
 
@@ -12,26 +15,23 @@
 <body>
     <header>
         <div id="header"></div>
-        <h1>박서현의 홈페이지</h1>
+        <h1>PORTFOLIO</h1>
         </div>
         <div id="nav">
             <ul>
                 <li><a href="#intro"> 내 소개 </a></li>
                 <li><a href="#study">SW 공부 </a></li>
                 <li><a href="#project"> 프로젝트 팀원 </a></li>
+                <li><a href = "single-post.html"> 프로젝트 </a></li>
             </ul>
         </div>
     </header>
 
-    <nav>
-        <p>박서현의 홈페이지에 오신 것을 환영합니다
-            이 홈페이지는 인터페이스 디자인 실습 강의의 실습 예제로 만들었습니다.
-            오늘 처음으로 글자태그를 배우고 있는데, 열심히 배워서 멋진 홈페이지를 만들어 보겠습니다.
-        </p>
-        <p>글자 태그를 배우고 나서 빨리 목록 태그도 배워서 저에 대해서 목록으로 표현을 할 수 있으면 좋겠습니다.
-            오늘 강의에서 목록 태그를 배우고 나면, 제 홈페이지에 저에 대한 몇가지 사실을 목록 태그를
-            활용하여 알려드릴게요.
-        </p>
+    <nav id = "introduce">
+        <p> 안녕하세요. 박서현입니다.</p>
+        <p> 한국 폴리텍 성남 캠퍼스 1학년에 재학 중, 인터페이스 강의를 들으며 웹페이지를 처음 만들어보게 되었습니다.</p>
+        <p> 더 많은 기능들을 공부하며 생각을 표현하고 전달하는 일을 해보고 싶습니다.</p>
+        <p> 현재, 앞으로 하고 싶은 일에 대해 고민하며 발전해나가는 사람이 되기 위해 노력 중에 있습니다.</p>
     </nav>
    
 
@@ -40,11 +40,9 @@
     <div class="grid-container">
         <div id = "intro" class="intro">
             <div id="img">
-                <img src="../images/BlackCAT_01.jpg" alt="검은 고양이" width="320">
+                <img src="assets/img/m2.jpg" alt="검은 고양이" width="320">
+                <img src="assets/img/m2.jpg" alt="검은 고양이" width="320">
             </div>   
-        <p>한국폴리텍 성남캠퍼스 인공지능소프트웨어과</p>
-        <p>전화번호 : 010-9071-2953</p>
-        <p>이메일 : 2403110272@office.kopo.ac.kr</p>
      </div>
      <div id = "field">
          <fieldset class="field">
