--- a/single/single-post.html
+++ b/single/single-post.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,15 +19,15 @@
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS Files -->
-  <link href="variables.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
+  <link href="../variables.css" rel="stylesheet">
+  <link href="../main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: ZenBlog
@@ -44,7 +44,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="../index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1>PORTFOLIO</h1>
@@ -84,22 +84,22 @@
               <h1 class="mb-5">Work in school</p>
 
               <figure class="my-4">
-                <img src="assets/img/jellyfish.jpg" alt="" class="img-fluid" width="800px">
+                <img src="../assets/img/jellyfish.jpg" alt="" class="img-fluid" width="800px">
                 <figcaption>2022_design_jellyfish : psd</figcaption>
               </figure>
             
               <figure class="my-4">
-                <img src="assets/img/tie.jpg" alt="" class="img-fluid">
+                <img src="../assets/img/tie.jpg" alt="" class="img-fluid">
                 <figcaption>2022_design_necktie : psd</figcaption>
               </figure>
 
               <figure class="my-4">
-                <img src="assets/img/knit02.jpg" alt="" class="img-fluid">
+                <img src="../assets/img/knit02.jpg" alt="" class="img-fluid">
                 <figcaption>2022_design_shoes and bags : cotton</figcaption>
               </figure>
 
               <figure class="my-4">
-                <img src="assets/img/diary.jpg" alt="" class="img-fluid">
+                <img src="../assets/img/diary.jpg" alt="" class="img-fluid">
                 <figcaption>2021_design_trash : cotton</figcaption>
               </figure>
              
@@ -116,14 +116,14 @@
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
 </body>
 
