--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#intro"> 내 소개 </a></li>
                 <li><a href="#study">SW 공부 </a></li>
                 <li><a href="#project"> 프로젝트 팀원 </a></li>
-                <li><a href = "single-post.html"> 프로젝트 </a></li>
+                <li><a href = "../single/single-post.html"> 프로젝트 </a></li>
             </ul>
         </div>
     </header>
