--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +24,9 @@
         <div id="nav">
             <ul>
                 <li><a href="#intro"> 내 소개 </a></li>
-                <li><a href="#study">SW 공부 </a></li>
-                <li><a href="#project"> 프로젝트 팀원 </a></li>
-                <li><a href = "../single/single-post.html"> 프로젝트 </a></li>
+                <li><a href="./single/project.html">SW 공부 </a></li>
+                <li><a href="./single/about.html"> 교내 프로젝트 </a></li>
+                <li><a href = "./single/single-post.html"> 작업물 </a></li>
             </ul>
         </div>
     </header>
@@ -45,8 +49,7 @@
             </div>   
      </div>
      <div id = "field">
-         <fieldset class="field">
-           
+         <fieldset class="field"> 
             <a href="https://www.acmicpc.net/user/psh4310220" target="_blank" >· 나의 BOJ 현황</a><br>
             </p>
             <p>
@@ -57,90 +60,13 @@
 
 
     <div id = "study">
-        <h2>지금 SW를 공부하고 있어요</h2>
-        <table>
-            <caption class="title">이번 학기에 배우는 과목</caption>
-            <thread>
-            <tr>
-            <th>과목</th>
-                <th>시간</th>
-                <th>과목 설명</th>
-            </tr>
-            </thread>
-            <tbody>
-            <tr>
-                <td>인터페이스 디자인 실습</td>
-                <td><p>· 화 오전 10:30 ~ 11:45</p>
-                    <p>· 금 오전 9:00 ~ 10:15</p>
-                </td>
-                <td>웹페이지 만들기 위한 HTML, CSS, JavaScript</td>
-            </tr>
-            <tr>
-                <td>알고리즘</td>
-                <td><p>· 수 오전 9:00 ~ 10:15</p>
-                    <p>· 금 오전 10:30 ~ 11:45</p>
-                </td>
-                <td>프로그래밍을 위한 알고리즘 마인드맵 작성</td>
-            </tr>
-            <tr>
-                <td>JAVA 기초</td>
-                <td><p>· 화 오전 9:00 ~ 10:15</p>
-                    <p>· 수 오전 10:30 ~ 11:45</p>
-                </td>
-                <td>Java 프로그램 기초 실습</td>
-            </tr>
-            <tr>
-                <td>기초 통계</td>
-                <td><p>· 월 오전 9:00 ~ 11:50</p></td>
-                <td>R프로그램을 이용한 기초 통계</td>
-            </tr>
-            <tr>
-                <td>데이터베이스</td>
-                <td><p>· 화 오후 12:50 ~ 15:40</p></td>
-                <td>ORACLE프로그램을 이용한 데이터베이스</td>
-            </tr>
-            <tr>
-                <td>발명과 창업</td>
-                <td><p>· 수 오후 12:50 ~ 14:40</p></td>
-                <td>한이음 팀 프로젝트 및 팀 프로그램</td>
-            </tr>
-            <tr>
-                <td>컴퓨터 구조</td>
-                <td><p>· 목 오전 9:00 ~ 11:50</p></td>
-                <td>컴퓨터 기본 구조와 운영체제</td>
-            </tr>
-            <tr>
-                <td>산업안전관리</td>
-                <td><p>· 목 오후 12:50 ~ 14:40</p></td>
-                <td>정보보안</td>
-            </tr>
-            <tr>
-                <td>영어 교양</td>
-                <td><p>· 수 오후 14:50 ~ 16:40</p></td>
-                <td>기본 영어 교양</td>
-            </tr>
-            </tbody>
-
-            </table>
-
+        <div id="img">
+        <img src="assets/img/table.jpg" width="1100">
+        </div>
     </div>
 
 
-    <div id = "project">
-        <h2>프로젝트 팀원</h2>
-        <p>
-            <a href="https://github.com/redituser" target="_blank" >· 이국정</a> 
-        </p>
-        <p> 
-            <a href="https://github.com/asd8449" target="_blank" >· 박병준</a>
-        </p>
-        <p> 
-            <a href="https://github.com/haejun1213" target="_blank" >· 김해준</a>
-            </p>
-        <p> 
-            <a href="https://github.com/LswPolyAiSw" target="_blank" >· 이승우</a>
-        </p>
-    </div>
+    
 </div>
 </main>
 </body>
